--- a/lerna.json
+++ b/lerna.json
@@ -2,8 +2,10 @@
   "lerna": "2.0.0-rc.5",
   "version": "independent",
   "packages": [
-    "packages/bolt-css/*",
-    "packages/bolt-config-sassdoc/**"
+    "packages/bolt-assets/**/*",
+    "packages/bolt-ui-core/**/*",
+    "packages/bolt-config/**/*",
+    "packages/bolt-tools/**/*"
   ],
   "commands": {
     "bootstrap": {
