--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
   "name": "bolt",
   "version": "0.1.0",
-  "description": "Pega Digital's Design System",
-  "main": "index.js",
+  "description": "Pega Digital Design System",
   "scripts": {
-    "test2": "npm run build",
-    "styles:doc": "sassdoc packages/bolt-css/*/src/scss/*.scss --dest ./public/sassdoc --config packages/bolt-config-sassdoc/sassdoc.config.json",
-    "prepare": "patch-package",
-    "lint": "stylelint 'packages/bolt-css/**/*.scss' --syntax scss",
-    "sass": "node-sass --output-style compressed --source-map true --include-path packages/**/* --importer node_modules/node-sass-magic-importer/dist/cli.js -o ./packages/bolt-css/core/demo ./packages/bolt-css/core/main.scss",
-    "sass2": "cd ./packages/bolt-css/core && node-sass --output-style compressed --source-map true --include-path node_modules --importer node_modules/node-sass-magic-importer/dist/cli.js -o demo main.scss",
-    "autoprefixer": "postcss -u autoprefixer --autoprefixer.browsers 'last 3 versions' 'ie 9-11' -r demo/main.css",
+    "bootstrap": "lerna bootstrap",
     "build": "npm run lint && npm run sass && npm run autoprefixer",
-    "start": "npm run build && onchange 'packages/bolt-css/**/*.scss' -- npm run build",
-    "serve": "http-server demo",
-    "test": "bash test/test.sh"
+    "serve": "http-server demo"
   },
   "repository": {
     "type": "git",
@@ -31,24 +22,30 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
-    "@patternkit/patternlab-pattern-sync": "^0.1.0",
-    "@theme-tools/core": "^0.4.0",
-    "@theme-tools/plugin-browser-sync": "^0.4.0",
-    "autoprefixer": "^7.1.1",
+    "@bolt/build-styles": "^0.1.0-alpha.1",
+    "@bolt/component-button": "^0.1.0-alpha.1",
+    "@bolt/setting-colors": "^0.1.0-alpha.1",
+    "@bolt/setting-module-manager": "^0.1.0-alpha.1",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "generator-theme": "^0.4.1",
     "gulp-intermediate": "^3.0.1",
-    "lerna": "https://github.com/evocateur/lerna/tarball/v2.0.0-rc.5",
+    "gulp-sass": "^3.1.0",
+    "lerna": "^2.0.0",
     "node-sass": "^4.5.3",
     "node-sass-magic-importer": "^4.1.5",
     "onchange": "^3.2.1",
-    "patch-package": "^3.0.0",
     "postcss-cli": "^4.1.0",
     "pre-commit": "^1.2.2",
     "sassdoc-theme-flippant": "^0.1.0",
-    "sassdoc-theme-herman": "^1.0.0-alpha.7",
-    "stylelint": "^7.11.1",
+    "sassdoc-theme-herman": "^1.0.0-alpha.9",
+    "stylelint": "^7.12.0",
     "stylelint-scss": "^1.4.4",
-    "stylelint-selector-bem-pattern": "^1.0.0",
+    "stylelint-selector-bem-pattern": "^1.1.0",
     "surge": "^0.19.0"
   },
   "devDependencies": {
