Finished wiring up the basic Sass needed for POC button. Additional cleanup is still needed but hey, at least the thing compiles

--- a/lerna.json
+++ b/lerna.json
@@ -2,8 +2,14 @@
   "lerna": "2.0.0",
   "version": "independent",
   "packages": [
-    "packages/*",
-    "demo",
-    "."
+    "packages/setting*",
+    "packages/tool*",
+    "packages/generic*",
+    "packages/object*",
+    "packages/component*",
+    "packages/theme*",
+    "packages/utilities*",
+    "packages/build*",
+    "packages/bolt"
   ]
 }
