--- a/packages/tool-button-color/package.json
+++ b/packages/tool-button-color/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/tools-font-size",
-  "description": "Font Size Tool",
+  "name": "@bolt/tools-button-color",
+  "description": "Button Color Mixin",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -13,7 +13,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "'https://github.com/pega-digital/bolt/tree/master/packages/bolt-css/tools-font-size'"
+    "url": "https://github.com/pega-digital/bolt/tree/master/packages/bolt-css/tools-button-color"
   },
   "bugs": {
     "url": "'https://github.com/pega-digital/bolt/issues'"
@@ -23,10 +23,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/setting-module-manager": "^0.1.0-alpha.1",
-    "@bolt/tool-strip-unit": "^0.1.0-alpha.1",
-    "@bolt/tools-sassy-maps": "^0.1.0-alpha.1",
-    "@bolt/setting-modular-scale": "^0.1.0-alpha.1",
-    "@bolt/setting-global": "^0.1.0-alpha.1"
+    "@bolt/tools-text-contrast": "^0.1.0-alpha.1"
   }
 }
