--- a/packages/tools-spacing/package.json
+++ b/packages/tools-spacing/package.json
@@ -18,8 +18,12 @@
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
   },
-  "main": "_tools.spacing.scss",
+  "main": "index.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/tools-sassy-maps": "^0.1.0-alpha.1",
+    "@bolt/setting-spacing": "^0.1.0-alpha.1"
   }
 }
