--- a/packages/component-button/package.json
+++ b/packages/component-button/package.json
@@ -22,7 +22,13 @@
     "url": "https://github.com/pega-digital/bolt/issues"
   },
   "dependencies": {
-    "@bolt/setting-colors": "^0.1.0-alpha.1"
+    "@bolt/setting-colors": "^0.1.0-alpha.1",
+    "@bolt/tools-button-color": "^0.1.0-alpha.1",
+    "@bolt/setting-global": "^0.1.0-alpha.1",
+    "@bolt/tools-font-weight": "^0.1.0-alpha.1",
+    "@bolt/tools-no-select": "^0.1.0-alpha.1",
+    "@bolt/tools-font-size": "^0.1.0-alpha.1",
+    "@bolt/tools-spacing": "^0.1.0-alpha.1"
   },
   "style": "_components.buttons.scss",
   "twig": "button.twig",
