--- a/packages/setting-modular-scale/package.json
+++ b/packages/setting-modular-scale/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/setting-spacing",
-  "description": "Spacing Settings",
+  "name": "@bolt/setting-modular-scale",
+  "description": "Typographic Modular Scale Settings",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -13,7 +13,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pega-digital/bolt/tree/master/packages/bolt-css/setting-spacing"
+    "url": "https://github.com/pega-digital/bolt/tree/master/packages/bolt-css/setting-modular-scale"
   },
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
@@ -21,5 +21,8 @@
   "main": "index.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "modularscale-sass": "^3.0.3"
   }
 }
