--- a/packages/tools-spacing/package.json
+++ b/packages/tools-spacing/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0-alpha.2",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -23,7 +23,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-sassy-maps": "^0.1.0-alpha.1",
-    "@bolt/setting-spacing": "^0.1.0-alpha.1"
+    "@bolt/setting-spacing": "^0.1.0-alpha.2",
+    "@bolt/tools-sassy-maps": "^0.1.0-alpha.2"
   }
 }
