--- a/packages/build-tools-styles/package.json
+++ b/packages/build-tools-styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-styles",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0-alpha.2",
   "license": "MIT",
   "description": "Compile Sass to CSS",
   "main": "index.js",
@@ -32,5 +32,8 @@
     "node-sass-export": "0.0.2",
     "node-sass-magic-importer": "^4.1.5",
     "path": "^0.12.7"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
