--- a/packages/tool-font-size/package.json
+++ b/packages/tool-font-size/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0-alpha.2",
   "author": "Salem Ghoweri",
   "homepage": "'https://boltdesignsystem.com'",
   "license": "MIT",
@@ -23,10 +23,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/setting-module-manager": "^0.1.0-alpha.1",
-    "@bolt/tool-strip-unit": "^0.1.0-alpha.1",
-    "@bolt/tools-sassy-maps": "^0.1.0-alpha.1",
-    "@bolt/setting-modular-scale": "^0.1.0-alpha.1",
-    "@bolt/setting-global": "^0.1.0-alpha.1"
+    "@bolt/setting-global": "^0.1.0-alpha.2",
+    "@bolt/setting-modular-scale": "^0.1.0-alpha.2",
+    "@bolt/setting-module-manager": "^0.1.0-alpha.2",
+    "@bolt/tool-strip-unit": "^0.1.0-alpha.2",
+    "@bolt/tools-sassy-maps": "^0.1.0-alpha.2"
   }
 }
