Adding working version of Twig being compiled via Node + PHP Twig

--- a/packages/component-button/package.json
+++ b/packages/component-button/package.json
@@ -30,7 +30,7 @@
     "@bolt/tools-no-select": "^0.1.0-alpha.2",
     "@bolt/tools-spacing": "^0.1.0-alpha.2"
   },
-  "style": "_components.buttons.scss",
+  "style": "index.scss",
   "twig": "button.twig",
   "publishConfig": {
     "access": "public"
