--- a/packages/component-input/package.json
+++ b/packages/component-input/package.json
@@ -21,9 +21,8 @@
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
   },
-  "main": "src/band.js",
-  "style": "src/_components.band.scss",
-  "twig": "src/button.twig",
+  "style": "index.scss",
+  "twig": "input.twig",
   "publishConfig": {
     "access": "public"
   }
