--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "npm run lint && npm run sass && npm run autoprefixer",
-    "serve": "http-server demo"
+    "serve": "http-server demo",
+    "postinstall": "npm run bootstrap"
   },
   "repository": {
     "type": "git",
@@ -28,13 +29,24 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "backstopjs": "^2.7.5",
+    "fs": "0.0.1-security",
     "generator-theme": "^0.4.1",
+    "glob": "^7.1.2",
+    "gulp-data": "^1.2.1",
+    "gulp-flatten": "^0.3.1",
     "gulp-intermediate": "^3.0.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-twig": "^0.7.0",
+    "gulp-twig-php": "^0.2.1",
     "lerna": "^2.0.0",
+    "merge": "^1.2.0",
     "node-sass": "^4.5.3",
     "node-sass-magic-importer": "^4.1.5",
+    "node-twig": "^1.1.0",
     "onchange": "^3.2.1",
+    "path": "^0.12.7",
     "postcss-cli": "^4.1.0",
     "pre-commit": "^1.2.2",
     "sassdoc-theme-flippant": "^0.1.0",
