--- a/packages/component-button/package.json
+++ b/packages/component-button/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -22,13 +22,13 @@
     "url": "https://github.com/pega-digital/bolt/issues"
   },
   "dependencies": {
-    "@bolt/setting-colors": "^0.1.0-alpha.2",
-    "@bolt/setting-global": "^0.1.0-alpha.2",
-    "@bolt/tools-button-color": "^0.1.0-alpha.2",
-    "@bolt/tools-font-size": "^0.1.0-alpha.2",
-    "@bolt/tools-font-weight": "^0.1.0-alpha.2",
-    "@bolt/tools-no-select": "^0.1.0-alpha.2",
-    "@bolt/tools-spacing": "^0.1.0-alpha.2"
+    "@bolt/setting-colors": "^0.1.0",
+    "@bolt/setting-global": "^0.1.0",
+    "@bolt/tools-button-color": "^0.1.0",
+    "@bolt/tools-font-size": "^0.1.0",
+    "@bolt/tools-font-weight": "^0.1.0",
+    "@bolt/tools-no-select": "^0.1.0",
+    "@bolt/tools-spacing": "^0.1.0"
   },
   "style": "index.scss",
   "twig": "button.twig",
