--- a/packages/tool-button-color/package.json
+++ b/packages/tool-button-color/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0",
   "author": "Salem Ghoweri",
   "homepage": "'https://boltdesignsystem.com'",
   "license": "MIT",
@@ -23,6 +23,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-text-contrast": "^0.1.0-alpha.2"
+    "@bolt/tools-text-contrast": "^0.1.0"
   }
 }
