--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/bolt",
-  "version": "0.1.1-alpha.0",
+  "version": "0.1.1",
   "description": "Bolt. Pega Digital's Design System",
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
-    "@bolt/component-button": "^0.1.0-alpha.2"
+    "@bolt/component-button": "^0.1.0"
   },
   "publishConfig": {
     "access": "public"
