--- a/packages/build-tools-styles/package.json
+++ b/packages/build-tools-styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-styles",
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0",
   "license": "MIT",
   "description": "Compile Sass to CSS",
   "main": "index.js",
