--- a/packages/setting-module-manager/package.json
+++ b/packages/setting-module-manager/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0",
   "author": "Salem Ghoweri",
   "homepage": "'https://boltdesignsystem.com'",
   "license": "MIT",
