--- a/packages/tool-color-palette/package.json
+++ b/packages/tool-color-palette/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0",
   "author": "Salem Ghoweri",
   "homepage": "'https://boltdesignsystem.com'",
   "license": "MIT",
@@ -23,8 +23,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/setting-colors": "^0.1.0-alpha.2",
-    "@bolt/setting-module-manager": "^0.1.0-alpha.2",
-    "@bolt/tools-sassy-maps": "^0.1.0-alpha.2"
+    "@bolt/setting-colors": "^0.1.0",
+    "@bolt/setting-module-manager": "^0.1.0",
+    "@bolt/tools-sassy-maps": "^0.1.0"
   }
 }
