--- a/packages/tool-text-contrast/package.json
+++ b/packages/tool-text-contrast/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0",
   "author": "Salem Ghoweri",
   "homepage": "'https://boltdesignsystem.com'",
   "license": "MIT",
@@ -23,7 +23,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/setting-module-manager": "^0.1.0-alpha.2",
-    "@bolt/tools-color-palette": "^0.1.0-alpha.2"
+    "@bolt/setting-module-manager": "^0.1.0",
+    "@bolt/tools-color-palette": "^0.1.0"
   }
 }
