--- a/packages/build-tools-styles/package.json
+++ b/packages/build-tools-styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-styles",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "license": "MIT",
   "description": "Compile Sass to CSS",
   "main": "index.js",
@@ -29,7 +29,9 @@
     "gulp-sourcemaps": "^2.6.0",
     "json-sass": "^1.3.5",
     "node-sass-export": "0.0.2",
-    "path": "^0.12.7"
+    "node-sass-magic-importer": "^4.1.5",
+    "path": "^0.12.7",
+    "gulp": "github:gulpjs/gulp#4.0"
   },
   "publishConfig": {
     "access": "public"
