--- a/packages/build-tools-styles/package.json
+++ b/packages/build-tools-styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-styles",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "description": "Compile Sass to CSS",
   "main": "index.js",
@@ -18,6 +18,7 @@
   "dependencies": {
     "autoprefixer": "^7.1.2",
     "browserslist": "^2.1.5",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-clean-css": "^3.6.0",
     "gulp-duration": "0.0.0",
     "gulp-notify": "^3.0.0",
@@ -30,8 +31,7 @@
     "json-sass": "^1.3.5",
     "node-sass-export": "0.0.2",
     "node-sass-magic-importer": "^4.1.5",
-    "path": "^0.12.7",
-    "gulp": "github:gulpjs/gulp#4.0"
+    "path": "^0.12.7"
   },
   "publishConfig": {
     "access": "public"
