Stashing latest for demo

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,27 @@
-.DS_Store
-*.idea
-*.psd
-*.psb
-*.tmp
-packages/_*
+_tests
 !*.map
 !*/*.map
+.DS_Store
+.sass-cache
+*.css.map
+*.idea
+*.map
+*.psb
+*.psd
+*.tmp
+bower_components
 css-framework
+lerna-debug.log
 node_modules
 node_modules/*
-bower_components
-vendor
-public
-.sass-cache
-packagesInProgress
-stuff
-_tests
+packages/_*
+packages/**/package-lock.json
 packages/*/tests/tmp
+packagesInProgress
+public
+stuff
+vendor
+
+packages/_bolt-build-tools
+packages/_pegakit-css
+packages/_pegakit-ui
