--- a/packages/bolt-config/config-stylelint/package.json
+++ b/packages/bolt-config/config-stylelint/package.json
@@ -1,23 +1,26 @@
 {
   "name": "@bolt/config-stylelint",
-  "description": "avalanche stylelint config",
+  "description": "Bolt Stylelint config",
   "keywords": [
     "stylelint",
     "stylelint-config"
   ],
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0",
   "author": "Salem Ghoweri",
-  "homepage": "https://avalanche.oberlehner.net/",
+  "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/avalanchesass/avalanche/tree/master/packages/stylelint-config"
+    "url": "https://github.com/pega-digital/bolt/tree/master/packages/stylelint-config"
   },
   "bugs": {
-    "url": "https://github.com/avalanchesass/avalanche/issues"
+    "url": "https://github.com/pega-digital/bolt/issues"
   },
   "dependencies": {
-    "stylelint-order": "^0.3.0"
+    "stylelint-order": "^0.5.0",
+    "stylelint-scss": "^1.5.1",
+    "stylelint-selector-bem-pattern": "^1.1.0",
+    "stylelint-selector-pattern": "0.0.2"
   },
   "main": "index.js"
 }
