--- a/packages/components-button/package.json
+++ b/packages/components-button/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bolt/component-button",
+  "name": "@bolt/components-button",
   "type": "pattern",
   "patternType": "atoms",
   "patternSubType": "buttons",
