--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "version": "0.1.0",
   "description": "Pega Digital Design System",
   "scripts": {
+    "build": "gulp build",
+    "serve": "gulp serve",
+    "lint": "gulp lint",
+    "fix": "gulp fix",
+    "fix:scripts": "gulp scripts:fix",
+    "fix:scss": "gulp styles:fix",
+    
+    
     "bootstrap": "lerna bootstrap",
-    "build": "npm run lint && npm run sass && npm run autoprefixer",
-    "serve": "http-server demo",
-    "postinstall": "npm run bootstrap",
-    "publish": "lerna publish --skip-git --always"
+    "commitmsg": "validate-commit-msg",
+    "publish": "lerna publish",
+    "publish-please": "publish-please",
+    "prepublishOnly": "publish-please guard",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect"
   },
   "repository": {
     "type": "git",
@@ -24,41 +35,76 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
+    "@bolt/build-styles": "^0.1.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "backstopjs": "^2.7.5",
+    "backstopjs": "^2.8.4",
+    "cz-conventional-changelog": "^2.0.0",
     "fs": "0.0.1-security",
-    "generator-theme": "^0.4.1",
     "glob": "^7.1.2",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-data": "^1.2.1",
     "gulp-flatten": "^0.3.1",
-    "gulp-intermediate": "^3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-twig": "^0.7.0",
     "gulp-twig-php": "^0.2.1",
+    "html-minifier": "^3.5.2",
+    "husky": "^0.14.3",
+    "immutable-css": "^1.1.2",
+    "immutable-css-cli": "^1.1.1",
+    "import-postcss": "^8.0.2",
     "lerna": "^2.0.0",
     "merge": "^1.2.0",
+    "minimatch": "^3.0.4",
     "node-sass": "^4.5.3",
-    "node-sass-magic-importer": "^4.1.5",
     "node-twig": "^1.1.0",
     "onchange": "^3.2.1",
     "path": "^0.12.7",
     "postcss-cli": "^4.1.0",
+    "postcss-smart-import": "^0.7.5",
     "pre-commit": "^1.2.2",
-    "sassdoc-theme-flippant": "^0.1.0",
+    "publish-please": "^2.3.1",
+    "request": "^2.81.0",
+    "sassdoc": "^2.3.0",
+    "sassdoc-theme-default": "^2.6.1",
     "sassdoc-theme-herman": "^1.0.0-alpha.9",
-    "stylelint": "^7.12.0",
-    "stylelint-scss": "^1.4.4",
+    "semantic-release": "^6.3.6",
+    "snyk": "^1.36.2",
+    "stylefmt": "^6.0.0",
+    "stylelint": "^7.13.0",
+    "stylelint-scss": "^1.5.1",
     "stylelint-selector-bem-pattern": "^1.1.0",
-    "surge": "^0.19.0"
+    "validate-commit-msg": "^2.12.2"
   },
-  "devDependencies": {
-    "gulp": "github:gulpjs/gulp#4.0",
-    "sassdoc": "^2.3.0"
-  }
+  "pre-commit": [
+    
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    },
+    "validate-commit-msg": {
+      "maxSubjectLength": 100,
+      "subjectPattern": ".+",
+      "subjectPatternErrorMsg": "Subject does not match subject pattern!",
+      "types": [
+        "chore",
+        "docs",
+        "feat",
+        "fix",
+        "perf",
+        "refactor",
+        "revert",
+        "style",
+        "test"
+      ],
+      "warnOnFail": false
+    }
+  },
+  "snyk": true
 }
