--- a/packages/components-button/button.ui_patterns.yml
+++ b/packages/components-button/button.ui_patterns.yml
@@ -1,7 +1,7 @@
 button:
   label: Button
   description: A simple button.
-  use: "@bolt/button.twig"
+  use: "src/twig/button.twig"
   fields:
     title:
       type: text
