--- a/packages/components-button/package.json
+++ b/packages/components-button/package.json
@@ -30,8 +30,8 @@
     "@bolt/tools-no-select": "^0.1.0",
     "@bolt/tools-spacing": "^0.1.0"
   },
-  "style": "index.scss",
-  "twig": "button.twig",
+  "style": "src/scss/index.scss",
+  "twig": "src/twig/button.twig",
   "publishConfig": {
     "access": "public"
   }
