Fixing trailing comma

--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
-    "@bolt/components-button": "^0.1.0",
+    "@bolt/components-button": "^0.1.0"
   },
   "publishConfig": {
     "access": "public"
