--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,21 @@
 language: node_js
-
 node_js:
   - 7
   
 env:
-  global:
-    - CHROME_BIN=chromium-browser
-    - DISPLAY=:99.0
-    
-os:
-  - linux
+  - CXX=g++-4.8
+  
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+    # - CHROME_BIN=chromium-browser
+    # - DISPLAY=:99.0
+#     
+# os:
+#   - linux
 
 install:
   - npm install
@@ -27,4 +33,6 @@ after_success:
 cache:
   directories:
     - node_modules
+    - **/node_modules
+    - **/vendor
   
