--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,10 @@ before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -q
   - sudo apt-get install gcc-4.8 -y
-  - sudo apt-get install php7.0
+  - sudo add-apt-repository ppa:ondrej/php
+  - sudo apt-get install python-software-properties
+  - sudo apt-get update
+  - sudo apt-get install php7.1
   - sudo apt-get install graphicsmagick
   - curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
   - composer clear-cache
