--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -q
   - sudo apt-get install gcc-4.8 -y
-  - sudo add-apt-repository ppa:ondrej/php
+  - sudo add-apt-repository ppa:ondrej/php -y
   - sudo apt-get install python-software-properties
   - sudo apt-get update
   - sudo apt-get install php7.1
