Adding npm init script

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
 
 script:
   - npm run bootstrap
+  - npm run init
 
 before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
