--- a/.travis.yml
+++ b/.travis.yml
@@ -16,17 +16,18 @@ script:
   - npm run init
 
 before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo apt-get update -q
-  - sudo apt-get install gcc-4.8 -y
-  - sudo add-apt-repository ppa:ondrej/php -y
-  - sudo apt-get install python-software-properties
-  - sudo apt-get update
-  - sudo apt-get install php7.1
-  - sudo apt-get install graphicsmagick
+  # - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -qq
+  # - sudo apt-get install gcc-4.8 -y
+  # - sudo add-apt-repository ppa:ondrej/php -y
+  # - sudo apt-get install python-software-properties
+  # - sudo apt-get update
+  # - sudo apt-get install php7.1
+  # - sudo apt-get install graphicsmagick
   - curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
-  - composer clear-cache
+  # - composer clear-cache
   - if [[ `npm -v` != 5* ]]; then npm i -g npm@5; fi
+  # - npm install --global npm@5
  # - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && source ~/.nvm/nvm.sh && nvm install 7
 
 
@@ -34,8 +35,12 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
+      - ppa:ondrej/php
     packages:
       - g++-4.8
+      - php7.1
+      - graphicsmagick
+      - python-software-properties
 
 after_success:
   - chmod ugo+x ./scripts/deploy.sh
