WIP: Typography setup

--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
+    "@bolt/settings-typography": "^0.0.0",
+    "@bolt/tools-typography": "^0.0.0",
+    "@bolt/generics-typography": "^0.0.0",
     "@bolt/components-button": "^0.1.0"
   },
   "publishConfig": {
