--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Pega Digital Design System",
   "scripts": {
     "build": "gulp build",
+    "postinstall": "sh scripts/install-homebrew.sh",
     "serve": "gulp serve",
     "init": "cd sandbox/pattern-library && composer install --no-interaction && php core/console --generate",
     "lint": "gulp lint",
@@ -41,9 +42,11 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "backstopjs": "^2.8.4",
     "cz-conventional-changelog": "^2.0.0",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.7.0",
     "fs": "0.0.1-security",
     "glob": "^7.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -55,9 +58,8 @@
     "gulp-twig-php": "^0.2.1",
     "html-minifier": "^3.5.2",
     "husky": "^0.14.3",
-    "immutable-css": "^1.1.2",
-    "immutable-css-cli": "^1.1.1",
     "import-postcss": "^8.0.2",
+    "inquirer": "^3.2.0",
     "lerna": "^2.0.0",
     "merge": "^1.2.0",
     "minimatch": "^3.0.4",
@@ -79,10 +81,7 @@
     "stylelint": "^7.13.0",
     "stylelint-scss": "^1.5.1",
     "stylelint-selector-bem-pattern": "^1.1.0",
-    "validate-commit-msg": "^2.12.2",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.7.0"
+    "validate-commit-msg": "^2.12.2"
   },
   "pre-commit": [],
   "config": {
