--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pega Digital Design System",
   "scripts": {
     "build": "gulp build",
-    "postinstall": "sh scripts/install-homebrew.sh",
+    "postinstall": "scripts/install-homebrew.sh",
     "serve": "gulp serve",
     "init": "cd sandbox/pattern-library && composer install --no-interaction && php core/console --generate",
     "lint": "gulp lint",
