--- a/.travis.yml
+++ b/.travis.yml
@@ -15,20 +15,31 @@ script:
   - npm run bootstrap
   - npm run init
 
+
 before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo add-apt-repository ppa:ondrej/php -y
   - sudo apt-get update -qq
   - sudo apt-get install php7.1  gcc-4.8 g++-4.8 graphicsmagick python-software-properties -y
   - curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
-  # - composer clear-cache
   - if [[ `npm -v` != 5* ]]; then npm i -g npm@5; fi
+  # - composer clear-cache
   # - npm install --global npm@5
  # - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && source ~/.nvm/nvm.sh && nvm install 7
 
 after_success:
   - chmod ugo+x ./scripts/deploy.sh
-  - ./scripts/deploy.sh
+  # - ./scripts/deploy.sh
+
+
+deploy:
+  provider: surge
+  scripts: ./scripts/deploy.sh
+  project: ./sandbox/pattern-library/public/
+  domain: https://boltdesignsystem.surge.sh
+  skip_cleanup: true
+  on:
+    all_branches: true
 
 cache:
   apt: true
