fix: testing fix for surge.sh deploys to PL works

--- a/.surgeignore
+++ b/.surgeignore
@@ -1,2 +1,4 @@
 !sandbox/pattern-library/public
-!sandbox/pattern-library/public/styleguide/bower_components
+!sandbox/pattern-library/public/styleguide/bower_components/
+!bower_components
+!**/bower_components
