WIP: testing slack notifications

--- a/sandbox/pattern-library/config/config.yml
+++ b/sandbox/pattern-library/config/config.yml
@@ -8,6 +8,9 @@ id:
     - scss
     - .svn
     - .sass-cache
+    - scripts
+    - styles
+    - images
 cleanPublic: 'true'
 patternStates:
     - inprogress
