--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "deploy:surge": "npm run build && surge sandbox/pattern-library/public $npm_package_config_surgeDomain",
     "build": "gulp patternlab:compile",
     "setup:homebrew": "sh scripts/install-homebrew.sh",
+    "test:deploy": "sh scripts/deploy-test.sh && gulp toslack",
     "serve": "gulp serve",
     "init": "cd sandbox/pattern-library && composer install --no-interaction",
     "lint": "gulp lint",
@@ -58,7 +59,6 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
-    "surge": "^0.18.0",
     "@bolt/build-styles": "^0.1.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
@@ -67,6 +67,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "cz-conventional-changelog": "^2.0.0",
+    "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-config-airbnb-base": "^11.2.0",
@@ -78,6 +79,7 @@
     "gulp-flatten": "^0.3.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-slack": "^0.1.2",
     "gulp-twig": "^0.7.0",
     "gulp-twig-php": "^0.2.1",
     "html-minifier": "^3.5.2",
@@ -88,6 +90,7 @@
     "merge": "^1.2.0",
     "minimatch": "^3.0.4",
     "node-sass": "^4.5.3",
+    "node-slack": "0.0.7",
     "node-twig": "^1.1.0",
     "onchange": "^3.2.1",
     "path": "^0.12.7",
@@ -105,6 +108,7 @@
     "stylelint": "^7.13.0",
     "stylelint-scss": "^1.5.1",
     "stylelint-selector-bem-pattern": "^1.1.0",
+    "surge": "^0.18.0",
     "validate-commit-msg": "^2.12.2"
   },
   "pre-commit": [],
