WIP: responsive typography

--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
+    "@bolt/settings-breakpoints": "^0.0.0",
     "@bolt/settings-typography": "^0.0.0",
+    "@bolt/tools-breakpoints": "^0.0.0",
     "@bolt/tools-typography": "^0.0.0",
     "@bolt/generics-typography": "^0.0.0",
     "@bolt/components-button": "^0.1.0"
