--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
   "lerna": "2.0.0",
   "version": "independent",
+  "npmClient": "yarn",
+  "npmClientArgs": ["--production", "--no-optional"],
   "packages": [
     "packages/setting*",
     "packages/tool*",
@@ -10,6 +12,7 @@
     "packages/theme*",
     "packages/utilities*",
     "packages/build*",
-    "packages/bolt"
+    "packages/bolt",
+    "sandbox/**/*"
   ]
 }
