--- a/package.json
+++ b/package.json
@@ -3,23 +3,22 @@
   "version": "0.1.0",
   "description": "Pega Digital Design System",
   "scripts": {
-    "deploy:surge": "npm run build && surge sandbox/pattern-library/public $npm_package_config_surgeDomain",
+    "bootstrap": "lerna bootstrap --no-sort --concurrency 8",
     "build": "gulp patternlab:compile",
-    "setup:homebrew": "sh scripts/install-homebrew.sh",
-    "test:deploy": "sh scripts/deploy-test.sh && gulp toslack",
-    "serve": "gulp serve",
-    "init": "cd sandbox/pattern-library && composer install --no-interaction",
-    "lint": "gulp lint",
-    "fix": "gulp fix",
+    "commitmsg": "validate-commit-msg",
+    "deploy:surge": "npm run build && surge sandbox/pattern-library/public $npm_package_config_surgeDomain",
     "fix:scripts": "gulp scripts:fix",
     "fix:scss": "gulp styles:fix",
-    "bootstrap": "lerna bootstrap",
-    "commitmsg": "validate-commit-msg",
-    "publish": "lerna publish",
+    "fix": "gulp fix",
+    "lint": "gulp lint",
+    "prepublishOnly": "npm run snyk-protect",
     "prerelease": "lerna publish --canary",
     "publish-please": "publish-please",
-    "prepublishOnly": "npm run snyk-protect",
+    "publish": "lerna publish",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "serve": "gulp serve",
+    "setup:composer": "cd sandbox/pattern-library && composer install --no-interaction",
+    "setup:homebrew": "sh scripts/install-homebrew.sh",
     "snyk-protect": "snyk protect"
   },
   "config": {
@@ -83,6 +82,7 @@
     "gulp-twig": "^0.7.0",
     "gulp-twig-php": "^0.2.1",
     "html-minifier": "^3.5.2",
+    "http2": "^3.3.6",
     "husky": "^0.14.3",
     "import-postcss": "^8.0.2",
     "inquirer": "^3.2.0",
