--- a/packages/elements-headings/package.json
+++ b/packages/elements-headings/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@bolt/components-button",
+  "name": "@bolt/elements-headings",
   "type": "pattern",
-  "patternType": "components",
-  "patternSubtype": "button",
-  "description": "Button Component",
+  "patternType": "elements",
+  "patternSubtype": "headings",
+  "description": "Basic HTML Headings",
   "keywords": [
     "bolt design system",
     "bolt",
     "ui toolkit",
     "design system"
   ],
-  "version": "0.1.0",
+  "version": "0.0.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -24,7 +24,6 @@
   "dependencies": {
     "@bolt/settings-colors": "^0.1.0",
     "@bolt/settings-global": "^0.1.0",
-    "@bolt/tools-button-color": "^0.1.0",
     "@bolt/tools-font-size": "^0.1.0",
     "@bolt/tools-font-weight": "^0.1.0",
     "@bolt/tools-no-select": "^0.1.0",
