--- a/packages/generic-typography/package.json
+++ b/packages/generic-typography/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/generics-typography",
-  "description": "Typography Generics",
+  "name": "@bolt/generic-typography",
+  "description": "Typography Generic",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -14,7 +14,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/generics-typography"
+    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/generic-typography"
   },
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
