--- a/packages/tools-button-color/package.json
+++ b/packages/tools-button-color/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bolt/tools-button-color",
+  "name": "@bolt/tools-button-colors",
   "description": "Button Color Mixin",
   "keywords": [
     "bolt design system",
@@ -9,14 +9,14 @@
   ],
   "version": "0.1.0",
   "author": "Salem Ghoweri",
-  "homepage": "'https://boltdesignsystem.com'",
+  "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pega-digital/bolt/tree/master/packages/bolt-css/tools-button-color"
+    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/tools-button-colors"
   },
   "bugs": {
-    "url": "'https://github.com/pega-digital/bolt/issues'"
+    "url": "https://github.com/pega-digital/bolt/issues"
   },
   "main": "index.scss",
   "publishConfig": {
