--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -17,12 +17,20 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
+    "@bolt/settings-global": "^0.1.0",
     "@bolt/settings-breakpoints": "^0.0.0",
     "@bolt/settings-typography": "^0.0.0",
+    "@bolt/settings-colors": "^0.1.0",
+    "@bolt/settings-spacing": "^0.1.0",
     "@bolt/tools-breakpoints": "^0.0.0",
+    "@bolt/tools-button-colors": "^0.1.0",
+    "@bolt/tools-color-palette": "^0.1.0",
+    "@bolt/tools-sassy-maps": "^0.1.0",
+    "@bolt/tools-spacing": "^0.1.0",
+    "@bolt/tools-strip-unit": "^0.1.0",
+    "@bolt/tools-text-contrast": "^0.1.0",
     "@bolt/tools-typography": "^0.0.0",
-    "@bolt/generics-typography": "^0.0.0",
-    "@bolt/components-button": "^0.1.0"
+    "@bolt/generic-typography": "^0.0.0"
   },
   "publishConfig": {
     "access": "public"
