--- a/packages/tools-sassy-maps/package.json
+++ b/packages/tools-sassy-maps/package.json
@@ -9,11 +9,11 @@
   ],
   "version": "0.1.0",
   "author": "Salem Ghoweri",
-  "homepage": "'https://boltdesignsystem.com'",
+  "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pega-digital/bolt/tree/master/packages/bolt-css/tools-sassy-maps"
+    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/tools-sassy-maps"
   },
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
