--- a/packages/tools-strip-unit/package.json
+++ b/packages/tools-strip-unit/package.json
@@ -9,14 +9,14 @@
   ],
   "version": "0.1.0",
   "author": "Salem Ghoweri",
-  "homepage": "'https://boltdesignsystem.com'",
+  "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "'https://github.com/pega-digital/bolt/tree/master/packages/bolt-css/tool-strip-unit'"
+    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/tool-strip-unit"
   },
   "bugs": {
-    "url": "'https://github.com/pega-digital/bolt/issues'"
+    "url": "https://github.com/pega-digital/bolt/issues"
   },
   "main": "index.scss",
   "publishConfig": {
