--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo add-apt-repository ppa:ondrej/php -y
   - sudo apt-get update -qq
+  - sudo apt-get install yarn
   - sudo apt-get install php7.1  gcc-4.8 g++-4.8 graphicsmagick python-software-properties -y
   - curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
   - if [[ `npm -v` != 5* ]]; then npm i -g npm@5; fi
