--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,8 @@ env:
 before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo add-apt-repository ppa:ondrej/php -y
-  - sudo apt-get update -qq
-  - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  - sudo apt-get install yarn
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.27.5
+  - export PATH="$HOME/.yarn/bin:$PATH"
   - sudo apt-get install php7.1  gcc-4.8 g++-4.8 graphicsmagick python-software-properties -y
   - curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
   - if [[ `npm -v` != 5* ]]; then npm i -g npm@5; fi
