--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,41 @@
-language: node_js
-
-node_js:
-- 7
-
+sudo: required
 dist: trusty
 
+language: php
+php:
+  - 7
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: hhvm
+
 env:
-  global:
-    - CXX=g++-4.8
+  - NODE_RELEASE=7.x
+  - CXX=g++-4.8
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 
 before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo add-apt-repository ppa:ondrej/php -y
-  - sudo apt-get update -qq
+  - sudo rm -rf ~/.nvm - curl -sL "https://deb.nodesource.com/setup_${NODE_RELEASE}" | sudo -E bash -
+  - sudo apt-get install -y nodejs
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.27.5
   - export PATH="$HOME/.yarn/bin:$PATH"
-  - sudo apt-get install php7.1  gcc-4.8 g++-4.8 graphicsmagick python-software-properties -y
-  - curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
+  - sudo apt-get install graphicsmagick
+  - composer global require hirak/prestissimo
   - if [[ `npm -v` != 5* ]]; then npm i -g npm@5; fi
   # - composer clear-cache
   # - npm install --global npm@5
  # - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && source ~/.nvm/nvm.sh && nvm install 7
+
+## disable xdebug
+before_script:
+  - phpenv config-rm xdebug.ini
 
 script:
   - npm run bootstrap
