WIP: font weights and body size

--- a/packages/settings-font-size/package.json
+++ b/packages/settings-font-size/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/settings-typography",
-  "description": "Typography Settings",
+  "name": "@bolt/settings-font-size",
+  "description": "Font Size Settings",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -14,7 +14,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/settings-typography"
+    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/settings-font-size"
   },
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
