--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -19,9 +19,13 @@
   "dependencies": {
     "@bolt/settings-global": "^0.1.0",
     "@bolt/settings-breakpoints": "^0.0.0",
-    "@bolt/settings-typography": "^0.0.0",
+    "@bolt/settings-font-family": "^0.0.0",
+    "@bolt/settings-font-size": "^0.0.0",
+    "@bolt/settings-font-weight": "^0.0.0",
     "@bolt/settings-colors": "^0.1.0",
     "@bolt/settings-spacing": "^0.1.0",
+    "@bolt/settings-tokens-fonts": "^0.0.0",
+    "@bolt/tools-global": "^0.0.0",
     "@bolt/tools-breakpoints": "^0.0.0",
     "@bolt/tools-button-colors": "^0.1.0",
     "@bolt/tools-color-palette": "^0.1.0",
@@ -30,6 +34,7 @@
     "@bolt/tools-strip-unit": "^0.1.0",
     "@bolt/tools-text-contrast": "^0.1.0",
     "@bolt/tools-typography": "^0.0.0",
+    "@bolt/generic-global": "^0.0.0",
     "@bolt/generic-typography": "^0.0.0"
   },
   "publishConfig": {
