WIP: font-size map

--- a/packages/settings-font-stack/package.json
+++ b/packages/settings-font-stack/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/settings-font-family",
-  "description": "Font Family Settings",
+  "name": "@bolt/settings-font-stack",
+  "description": "Font Stack Settings",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -14,7 +14,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/settings-font-family"
+    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/settings-font-stack"
   },
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
