--- a/packages/tools-typography/package.json
+++ b/packages/tools-typography/package.json
@@ -22,5 +22,8 @@
   "style": "index.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/tools-sassy-maps": "^0.1.0"
   }
 }
