--- a/packages/build-tools-styles/package.json
+++ b/packages/build-tools-styles/package.json
@@ -43,6 +43,8 @@
     "postcss-scss": "^1.0.2",
     "postcss-smart-import": "^0.7.5",
     "precss": "^2.0.0",
+    "sassdoc": "^2.3.0",
+    "sassdoc-theme-flippant": "^0.1.0",
     "stylelint": "^7.13.0",
     "stylelint-selector-no-utility": "github:pega-digital/stylelint-selector-no-immutable"
   },
