style: font-family, font-size, font-weight

--- a/packages/settings-font-family/package.json
+++ b/packages/settings-font-family/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/settings-tokens-fonts",
-  "description": "Font Tokens Settings",
+  "name": "@bolt/settings-font-family",
+  "description": "Font Family Settings",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -14,7 +14,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/settings-tokens-fonts"
+    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/settings-font-family"
   },
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
