WIP: stashing latest. wrapping up initial batch of gulp tasks for release v0.1.0

--- a/packages/build-tools-styles/package.json
+++ b/packages/build-tools-styles/package.json
@@ -16,6 +16,7 @@
   ],
   "author": "Salem Ghoweri",
   "dependencies": {
+    "@bolt/build-core": "0.0.0",
     "autoprefixer": "^7.1.2",
     "browserslist": "^2.1.5",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -43,6 +44,7 @@
     "postcss-smart-import": "^0.7.5",
     "precss": "^2.0.0",
     "stylelint": "^7.13.0",
+    "stampit": "^3.1.3",
     "stylelint-selector-no-utility": "github:pega-digital/stylelint-selector-no-immutable"
   },
   "publishConfig": {
