--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "fs": "0.0.1-security",
     "glob": "^7.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-babel": "^6.1.2",
     "gulp-data": "^1.2.1",
     "gulp-flatten": "^0.3.1",
     "gulp-rename": "^1.2.2",
