WIP: fixing live reload issues + syncing up internal task functions that call one-another relating to watch tasks

--- a/packages/build-tools-server/package.json
+++ b/packages/build-tools-server/package.json
@@ -21,7 +21,9 @@
     "access": "public"
   },
   "dependencies": {
+    "@bolt/build-core": "0.0.0",
     "browser-sync": "^2.18.12",
+    "debug": "^2.6.8",
     "devcert": "^0.3.2",
     "devcert-with-localhost": "^0.3.3",
     "fs-extra": "^4.0.0",
