--- a/packages/build-tools-core/package.json
+++ b/packages/build-tools-core/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "browser-sync": "^2.18.12",
     "child_process": "^1.0.2",
+    "events": "^1.1.1",
     "fs-extra": "^4.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-exec": "^2.1.3",
@@ -27,9 +28,7 @@
     "js-yaml": "^3.8.3",
     "merge": "^1.2.0",
     "node-notifier": "^5.1.2",
-    "path": "^0.12.7",
-    "stamp-specification": "^1.4.1",
-    "stampit": "^3.1.3"
+    "path": "^0.12.7"
   },
   "publishConfig": {
     "access": "public"
