--- a/packages/build-tools-styles/package.json
+++ b/packages/build-tools-styles/package.json
@@ -19,6 +19,7 @@
     "@bolt/build-core": "0.0.0",
     "autoprefixer": "^7.1.2",
     "browserslist": "^2.1.5",
+    "debug": "^2.6.8",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-clean-css": "^3.6.0",
     "gulp-duration": "0.0.0",
@@ -36,6 +37,7 @@
     "node-sass-export": "0.0.2",
     "node-sass-magic-importer": "^4.1.5",
     "npm-sass": "^2.2.1",
+    "path": "^0.12.7",
     "postcss-discard-comments": "^2.0.4",
     "postcss-easy-import": "^2.1.0",
     "postcss-import": "^10.0.0",
@@ -43,8 +45,8 @@
     "postcss-scss": "^1.0.2",
     "postcss-smart-import": "^0.7.5",
     "precss": "^2.0.0",
-    "stylelint": "^7.13.0",
     "stampit": "^3.1.3",
+    "stylelint": "^7.13.0",
     "stylelint-selector-no-utility": "github:pega-digital/stylelint-selector-no-immutable"
   },
   "publishConfig": {
